# Programming

./: .git-notes.txt.swp  ESP32.tar.bz2  JS_direct_save.html  JS_read.html  JS_save.html  MainScreen-edge.xcf  MainScreen-menu.xcf  MainScreen.xcf  Makefile  Map-with-Edge.xcf  Markdown Notes.md  Notes.txt  NuklearWinter68.sql  RED - Final Frontier.txt  Rifts Turn Chart.ods  The Long Road (py).tgz  Treasure of Nadia.txt  Units.csv  Units.ods  conversions.ods  corners.xcf  d6_rolls.txt  foo.db  fooness.tar.bz2  git-notes.txt  hexagon.xcf  hexagon10.xcf  hexagon15.xcf  hexagon5.xcf  hexagons.xcf  images.txt  index.html  jagged_alliance.db  kernel-Debian.txt  kernel-Mint.txt  kernel-Nobara.txt  nginx.tgz  pallet.xcf  perl-odbc.pl  roll_3d6.txt
C/GURPS/L_insert_into/: CMakeLists.txt  main.c
C/GURPS/M_Attack_s0/: CMakeLists.txt  main.c
C/GURPS/M_Attack_s0/Myne/: Attack.c  do_Shoot.c  get_Unit.c  myne.h  using_Both_Hands.c
C/GURPS/T_armCharacter/: CMakeLists.txt  main.c
C/GURPS/T_armCharacter/.kdev4/: T_armCharacter.kdev4
C/GURPS/T_armCharacter/Myne/: RegExpStuffs.c  armCharacter.c  myne.h
C/GURPS/T_clotheCharacter/: CMakeLists.txt  main.c
C/GURPS/T_clotheCharacter/.kdev4/: T_clotheCharacter.kdev4
C/GURPS/T_createCharacter/: CMakeLists.txt  T_createCharacter.kdev4
C/GURPS/T_createCharacter/.kdev4/: T_createCharacter.kdev4
C/GURPS/T_createCharacter/Myne/: Human.c
C/GURPS/T_handleWeapon/: CMakeLists.txt  T_handleWeapon.kdev4
C/GURPS/T_handleWeapon/.kdev4/: T_handleWeapon.kdev4
C/GURPS/arm_Character/: CMakeLists.txt  arm_Character.kdev4
C/GURPS/arm_Character/.kdev4/: arm_Character.kdev4
C/GURPS/clothe_Character/: CMakeLists.txt  clothe_Character.kdev4
C/GURPS/clothe_Character/.kdev4/: clothe_Character.kdev4
C/GURPS/create_Character/: CMakeLists.txt  create_Character.kdev4  main.c
C/GURPS/create_Character/.kdev4/: create_Character.kdev4
C/GURPS/create_Character/Myne/: arguments.c
C/GURPS/get_branch/: CMakeLists.txt  main.c
C/GURPS/get_branch/Myne/: myne.h
C/GURPS/s0_generateDamage_s1/: CMakeLists.txt  main.c  s0_generateDamage_s1.kdev4
C/GURPS/s0_generateDamage_s1/.kdev4/: s0_generateDamage_s1.kdev4
C/GURPS/s0_generateDamage_s1/Myne/: generateDamage.c  myne.h
CMAKE Lessons/Version 1/: CMakeLists.txt  main.c
CMAKE Lessons/v03a/: CMakeLists.txt  main.c
DO_ROUND/: CMakeLists.txt  DO_ROUND.kdev4  main.c
DO_ROUND/.kdev4/: DO_ROUND.kdev4
DO_ROUND/myne/: myne.h  part1.c
Palladium/createHuman/: CMakeLists.txt  createHuman.kdev4  main.c
Palladium/createHuman/.kdev4/: createHuman.kdev4
Palladium/createHuman/myne/: myne.h  part1.c
Palladium/viewHuman/: CMakeLists.txt  main.c  viewHuman.kdev4
Palladium/viewHuman/.kdev4/: viewHuman.kdev4
Palladium/viewHuman/myne/: myne.h  part1.c
Pico/03 - dualcore hello/: CMakeLists.txt  main.c
Pico/04 - SPI (Digi-Key)/: CMakeLists.txt
Pico/2 - button led/: CMakeLists.txt  main.c
Pico/6 - OLED 0.96/: CMakeLists.txt  raspberry26x32.h
Pico/Assembly Language/Test00/: CMakeLists.txt  Test.S
Pico/Trump/: 0-combine_files  CMakeLists - OK.txt  CMakeLists - crap.txt  CMakeLists.txt  CMakeLists.txt - v1  MAGA_Font.txt  Melania.tar.bz2  a.out  calls from graphicstest.txt  fish0001.cpp  fishes.tar.bz2  graphicstest.cpp  main.c  main.cpp
Pico/Trump/10 - mode0/: main.cpp  mode0.cpp  mode0_demo.cpp
Pico/Trump/10 - mode0/ili9341/: ILI9341.h
Pico/Trump/Barron/: CMakeLists GOOD.txt
Pico/Trump/Melania/: 0-combine_files  CMakeLists.txt  a.out  graphicstest.cpp  ili9341.cpp  main (copy).cpp  main.cpp  mode0.cpp  mode0.h  mode0_demo.cpp
Pico/Trump/Melania v1/: 0-combine_files  CMakeLists.txt
Pico/Trump/Melania v1/ili9341/: ILI9341.c
Pico/Trump/Melania v2/: 0-combine_files  main.cpp  mode0.cpp  mode0_demo.cpp
Pico/Trump/Melania v2/ili9341/: ILI9341.cpp
Pico/Trump/Melania/Barron/: 0-combine_files  CMakeLists.txt  main.c  main.cpp  mode0.c  mode0.cpp  mode0.h  mode0_demo.c  mode0_demo.cpp  mode2_demo.cpp
Pico/Trump/Melania/Barron v1/: main.c  mode0.c
Pico/Trump/Melania/ILI9341/: ILI9341.cpp  ILI9341.h  defines.h
Pico/Trump/Melania/Template/: ili9341.c
Pico/Trump/Melania/fishes/: fish0005.cpp
Pico/Trump/Melania/ili9341/: ILI9341.cpp  ILI9341.h  colors.h  defines.h
Pico/Trump/Melania/lib/: foo.cpp
Pico/Trump/Melania/maga_GFX/: MAGA_GFX.cpp  MAGA_GFX.h  MAGA_SPITFT.h  font1.h  font1.txt  glcdfont.c
Pico/Trump/Melania/stuffs/: defines.h
Pico/Trump/fishes/: a.out  aaa.txt  c64.txt  colors.txt  f6.txt  f6a.txt  f6b.txt  f6c.txt  f7.txt  f7a.txt  f7b.txt  f7c.txt  fish0002.cpp  fish0002a.cpp  fish0003.cpp  fish0004.cpp  fish0004a.cpp  fish0004b.cpp  fish0005.cpp  fish0006.cpp  fish0006a.cpp  fish0006b.cpp  fish0006c.cpp  fish0007.cpp  fish0007a.cpp  fish0007b.cpp  fish0007c.cpp  fish0007d.cpp  fish0007e.cpp  fish0008.cpp  fish0008a.cpp  fish0008b.cpp  fish0008c.cpp  fish0009.cpp  picoFunc.txt
Pico/Trump/myLibrary/foo/: foo.c
Pico/Trump/stuffs/: shawnhyam.cpp
Pico/Trump/stuffs - ORIGINAL/Adafruit-GFX-Library/: Adafruit_GFX.h
Pico/Trump/stuffs - ORIGINAL/Adafruit_ILI9341/: Adafruit_ILI9341.cpp  Adafruit_ILI9341.h
Pico/Trump/stuffs/mode0/: mode0.cpp  (+2 more)
Tags/deleteTag/: CMakeLists.txt  deleteTag.kdev4  main.c
Tags/deleteTag/.kdev4/: deleteTag.kdev4
Tags/deleteTag/myne/: myne.h  part1.c  utils1.c
Tags/insertTag/: CMakeLists.txt  insertTag.kdev4  main.c
Tags/insertTag/.kdev4/: insertTag.kdev4
Tags/insertTag/myne/: myne.h  part1.c  utils1.c
Tags/listTags/: CMakeLists.txt  listTags.kdev4  main.c
Tags/listTags/.kdev4/: listTags.kdev4
Tags/listTags/myne/: myne.h  part1.c  utils1.c
Tags/setID/: CMakeLists.txt  main.c  setID.kdev4
Tags/setID/.kdev4/: setID.kdev4
Tags/setID/myne/: myne.h  part1.c
manipulate/: CMakeLists.txt  main.c  manipulate.kdev4
manipulate/.kdev4/: manipulate.kdev4
manipulate/myne/: Movement.c  hexagoncol.c  myne.h  part1.c  utils1.c
php_img/: CMakeLists.txt  main.c  php_img.kdev4
php_img/.kdev4/: php_img.kdev4
setImage/: CMakeLists.txt  main.c  setImage.kdev4
setImage/.kdev4/: setImage.kdev4
setImage/myne/: myne.h  part1.c  utils1.c
(+2866 files in other folders)
